--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^25.0.9",
     "@types/react": "19.2.8",
     "typescript": "5.6.3"
   }
